--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
         <title>TWITTOLINA</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="logo.png" type="image/png">
+        <link rel="shortcut icon" href="additional/logo.png" type="image/png">
     </head>
 
     <body>
