--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
         <title>TWITTOLINA</title>
         <link href="style.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Amiko&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" href="logo.png" type="image/png">
+        <link rel="shortcut icon" href="additional/logo.png" type="image/png">
     </head>
 
     <body>
@@ -15,12 +15,6 @@
             <div class="TW">TWITTOLINA</div>
             <button class="buttonEXIT">EXIT</button>
         </header>
-
-        <footer>
-            <div class="Tw">Twittolina</div>
-            <div class="PV">Polina Volchetskaya, 2 course 5 group<br>pvolchetskaya0311@gmail.com</div>
-            <div class="Ch">Last changes:<br>01/03/2020</div>
-        </footer>
 
         <div class="menu">
             <div class="profile">
@@ -37,7 +31,7 @@
                     </div> 
                 </div>
                 <div class="filterUsername">username:
-                    <textarea class="text" placeholder="@user_name"></textarea>                </div>
+                    <textarea class="text" placeholder="@user_name"></textarea></div>
                 <div class="filterHashtags">hashtags:
                     <textarea class="text" placeholder="#hashtag"></textarea>
                 </div>
@@ -133,6 +127,12 @@
             </div>
             <button class="buttonMore">View more</button> 
         </main> 
+
+        <footer>
+            <div class="Tw">Twittolina</div>
+            <div class="PV">Polina Volchetskaya, 2 course 5 group<br>pvolchetskaya0311@gmail.com</div>
+            <div class="Ch">Last changes:<br>01/03/2020</div>
+        </footer>
 
     </body>
 
