fixed packages in maven-project (lab8); unfinished DOM (lab9)

--- a/Twittolina/src/main/webapp/WEB-INF/page.html
+++ b/Twittolina/src/main/webapp/WEB-INF/page.html
@@ -5,6 +5,6 @@
     <title>Java Servlets</title>
 </head>
 <body>
-<span>Static Page</span>
+<span>Static com.bsu.twitter.servlets.Page</span>
 </body>
 </html>
